# videochat

backend/: Cargo.toml
backend/src/: main.rs
backend/src/server/: mod.rs  peer.rs  peers.rs  signaling.rs
backend/src/utils/: config.rs  mod.rs
frontend/: bun.lockb  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/services/: socket.ts  webrtc.ts
