[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version= "1", features = ["full"]}
serde ={ version = "1.0", features = ["derive"]}
serde_json = "1.0"
features = "0.10.0"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11.6"
